--- a/page-2/css/desktop/hero.css
+++ b/page-2/css/desktop/hero.css
@@ -1,19 +1,19 @@
 .hero {
-  width: 1280px;
-  height: 336px;
+  width: 80%;
+  /* height: 336px; */
   margin-top: 128px;
-  margin-left: 160px;
+  margin-left: 10%;
   display: grid;
-  grid-template-columns: 595px 547px;
-  gap: 138px;
+  grid-template-columns: 52% 45%;
+  gap: 3%;
 
   .content {
     display: flex;
     flex-direction: column;
 
     span {
-      width: 419px;
-      height: 32px;
+      /* width: 419px; */
+      /* height: 32px; */
       font-family: Poppins;
       font-size: 18px;
       font-weight: 400;
@@ -24,8 +24,8 @@
     }
 
     h1 {
-      width: 595px;
-      height: 148px;
+      /* width: 595px;
+      height: 148px; */
       margin-top: 8px;
       font-family: Poppins;
       font-size: 54px;
@@ -35,8 +35,8 @@
       color: #282938;
     }
     p {
-      width: 484px;
-      height: 84px;
+      /* width: 484px;
+      height: 84px; */
       margin-top: 31px;
       opacity: 0.7px;
       font-family: Poppins;
