--- a/scss/desktop/blog.css
+++ b/scss/desktop/blog.css
@@ -1,6 +1,6 @@
 .blog {
   display: grid;
-  grid-template-columns: repeat(3, 405px);
+  grid-template-columns: repeat(3, auto);
   grid-template-rows: repeat(1, 609px);
   justify-content: center;
   gap: 32px;
