--- a/scss/tablet/intro.css
+++ b/scss/tablet/intro.css
@@ -8,7 +8,7 @@
 }
 .intro h1 {
   color: #fff;
-  width: 500px;
+  /* width: 500px; */
   font-family: Poppins;
   font-size: 44px;
   font-style: normal;
