--- a/page-2/css/desktop/benefits.css
+++ b/page-2/css/desktop/benefits.css
@@ -1,6 +1,6 @@
 .benefits {
-  width: 1280px;
-  height: 624px;
+  width: 80%;
+  /* height: 624px; */
   margin: 128px auto;
 
   h2 {
@@ -17,10 +17,10 @@
 
   .cards {
     display: flex;
-    gap: 32px;
+    gap: 2%;
     .card {
-      width: 405px;
-      height: 316px;
+      width: 33%;
+      /* height: 316px; */
       background-color: #f4f6fc;
       padding-left: 48px;
 
@@ -44,13 +44,16 @@
         line-height: 28px;
         text-align: left;
         color: #282938;
+        padding: 2%;
         opacity: 70%;
-        width: 324.08px;
+        /* width: 324.08px; */
       }
     }
   }
   .logo {
+    width: 80%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     margin-top: 48px;
   }
