--- a/page-2/css/desktop/footer.css
+++ b/page-2/css/desktop/footer.css
@@ -1,15 +1,15 @@
 footer {
-  width: 1600px;
+  width: 100%;
   height: 489px;
   background-color: #1c1e53;
   position: relative;
   display: flex;
 
   .content {
-    width: 1058px;
+    width: 80%;
     height: 206px;
     top: 96px;
-    left: 160px;
+    left: 10%;
     display: flex;
     justify-content: space-between;
     position: relative;
@@ -17,13 +17,13 @@ footer {
     background-color: #1c1e53;
     .left {
       top: 96px;
-      left: 160px;
+      left: 10%;
 
       img {
         width: 160px;
         height: 32.41px;
         top: 104px;
-        left: 159px;
+        left: 10%;
       }
       p {
         margin-top: 23.59px;
@@ -33,7 +33,7 @@ footer {
         line-height: 28px;
         letter-spacing: 0em;
         text-align: left;
-        width: 399px;
+        width: 80%;
         color: #ffffff;
         opacity: 80%;
       }
@@ -41,7 +41,7 @@ footer {
 
     .right {
       top: 96px;
-      right: 382px;
+      right: 100px;
 
       h2 {
         font-family: Poppins;
