--- a/page-2/css/desktop/missionVision.css
+++ b/page-2/css/desktop/missionVision.css
@@ -1,20 +1,22 @@
 .mission-vision {
-  width: 1599px;
-  height: 1022px;
+  width: 100%;
+  /* height: 1022px; */
   background-color: #eef4fa;
-  margin-top: 128px;
+  /* margin-top: 128px; */
   padding-top: 128px;
+  margin: 128px auto;
   display: flex;
-  gap: 96px;
+  gap: 30%;
   flex-direction: column;
   box-sizing: border-box;
   .mission,
   .vision {
-    width: 1278px;
-    height: 336px;
-    margin-left: 160px;
+    width: 80%;
+    /* height: 336px; */
+    margin-left: 10%;
     display: flex;
-    gap: 140px;
+    margin-bottom: 10%;
+    gap: 10%;
     justify-content: space-between;
     .content {
       span {
@@ -42,8 +44,9 @@
       }
     }
     img {
-      width: 515px;
-      height: 336px;
+      width: 40%;
+      height: 30%;
+      object-fit: cover;
     }
   }
 }
