--- a/page-2/css/main.css
+++ b/page-2/css/main.css
@@ -1,6 +1,6 @@
 @import url(./tailwind/main.css);
-@import "./tablet/main.css" only screen and (max-width:1200px);
-@import "./desktop/main.css" only screen and (min-width:1200px);
+@import "./tablet/main.css" only screen and (max-width: 768px);
+@import "./desktop/main.css" only screen and (min-width: 768px);
 
 * {
   box-sizing: border-box;
@@ -8,3 +8,6 @@
   padding: 0;
 }
 
+.wrapper {
+  width: 100%;
+}
