--- a/page-2/css/tablet/menu.css
+++ b/page-2/css/tablet/menu.css
@@ -12,27 +12,20 @@
     height: 24.71px;
     position: relative;
     top: 33px;
-    margin-left: 15px;
+    margin-left: 15%;
   }
-
-  /* .menu::before{
-    content: '';
-    width: 50px;
-    height: 50px;
-    background-color: gray;
-    margin-left: 0;
-    margin-top: 0;
-
-  } */
 
   .menu {
     text-align: center;
-    width: 100%;
+    width: 90%;
     display: flex;
+    flex-direction: column;
     position: relative;
+    flex-wrap: wrap;
+
     margin-top: 35px;
     gap: 25px;
-    margin-left: 10px;
+    margin-left: 5%;
     .option {
       a {
         /* margin-top: 30px; */
@@ -73,6 +66,8 @@
       margin-top: -17px;
       border-radius: 41px;
       border: 2px solid #f4f6fc33;
+      margin: auto;
+      margin-bottom: 2%;
     }
   }
 }
