--- a/scss/desktop/background.css
+++ b/scss/desktop/background.css
@@ -1,5 +1,5 @@
 .background {
-  width: 1600px;
+  width: 100%;
   height: 760px;
   background-color: #1C1E53;
 }/*# sourceMappingURL=background.css.map */
