--- a/scss/desktop/background2.css
+++ b/scss/desktop/background2.css
@@ -1,10 +1,10 @@
 .background2 {
-  width: 1600px;
+  width: 100%;
   height: 661px;
   display: grid;
-  grid-template-columns: 405px 656px;
+  grid-template-columns: 38% 60%;
   justify-content: center;
-  gap: 145px;
+  gap: 2%;
   padding-top: 128px;
 }
 .background2 .work {
@@ -23,6 +23,7 @@
   line-height: 64px; /* 133.333% */
 }
 .background2 .work p {
+  width: inherit;
   color: var(--Dark-blue, #282938);
   opacity: 0.7;
   font-family: Poppins;
@@ -44,8 +45,8 @@
 .background2 .options {
   height: 405px;
   display: grid;
-  grid-template-columns: repeat(2, 328px);
-  grid-template-rows: repeat(2, 178px);
+  grid-template-columns: repeat(2, auto);
+  grid-template-rows: repeat(2, auto);
 }
 .background2 .options .sub {
   display: flex;
@@ -56,7 +57,7 @@
   height: 50px;
 }
 .background2 .options .sub h5 {
-  width: 328px;
+  /* width: 328px; */
   color: var(--Dark-blue, #282938);
   font-family: Poppins;
   font-size: 32px;
@@ -65,7 +66,7 @@
   line-height: 48px; /* 150% */
 }
 .background2 .options .sub p {
-  width: 303px;
+  width: 70%;
   color: #282938;
   font-family: Poppins;
   font-size: 16px;
@@ -73,4 +74,4 @@
   font-weight: 400;
   line-height: 28px; /* 175% */
   opacity: 0.7;
-}/*# sourceMappingURL=background2.css.map */
+} /*# sourceMappingURL=background2.css.map */
