--- a/scss/desktop/clients.css
+++ b/scss/desktop/clients.css
@@ -1,10 +1,11 @@
 .clients {
   display: grid;
-  grid-template-columns: 35% 65%;
-  width: 1600px;
-  height: 506px;
+  grid-template-columns: 34% 64%;
+  width: 100%;
+  gap: 2%;
+  /* height: 506px; */
   background: var(--Grey, #f4f6fc);
-  padding: 130px 160px;
+  padding: 10% 15%;
 }
 .clients .saying {
   flex-grow: 1;
@@ -13,17 +14,17 @@
   row-gap: 16px;
 }
 .clients .saying h3 {
-  width: 327px;
+  /* width: 327px; */
   color: #282938;
   font-family: Poppins;
   font-size: 38px;
   font-style: normal;
   font-weight: 600;
-  line-height: 56px; /* 147.368% */
+  /* line-height: 56px; 147.368 */
 }
 .clients .saying p {
   color: var(--Dark-blue, #282938);
-  width: 327px;
+  /* width: 327px; */
   opacity: 0.7;
   font-family: Poppins;
   font-size: 16px;
@@ -33,7 +34,7 @@
 }
 .clients .comment {
   flex-grow: 2;
-  height: 250px;
+  /* height: 250px; */
   row-gap: 39.91px;
 }
 .clients .comment h5 {
@@ -48,13 +49,13 @@
 .clients .comment .sub {
   display: flex;
   -moz-column-gap: 485px;
-       column-gap: 485px;
+  column-gap: 485px;
   margin-top: 39.91px;
 }
 .clients .comment .sub .profile {
   display: flex;
   -moz-column-gap: 9.63px;
-       column-gap: 9.63px;
+  column-gap: 9.63px;
 }
 .clients .comment .sub .profile .cap {
   display: flex;
@@ -77,4 +78,4 @@
   font-style: normal;
   font-weight: 400;
   line-height: 28px; /* 233.333% */
-}/*# sourceMappingURL=clients.css.map */
+} /*# sourceMappingURL=clients.css.map */
