--- a/scss/desktop/clients.scss
+++ b/scss/desktop/clients.scss
@@ -1,7 +1,7 @@
 .clients {
   display: grid;
   grid-template-columns: 35% 65%;
-  width: 1600px;
+  width: 100%;
   height: 506px;
   // opacity: 0.5;
   background: var(--Grey, #f4f6fc);
