--- a/scss/desktop/project.css
+++ b/scss/desktop/project.css
@@ -1,25 +1,26 @@
 .project {
-  width: 1280px;
+  width: 80%;
   height: 728px;
-  margin-right: auto;
-  margin-left: auto;
+  /* margin-right: auto; */
+  margin-left: 5%;
 }
 .project .top {
   display: flex;
   margin-bottom: 64px;
 }
 .project .top h2 {
-  width: 467px;
+  /* width: 467px; */
   color: var(--Dark-blue, #282938);
   font-family: Poppins;
   font-size: 48px;
   font-style: normal;
   font-weight: 600;
   line-height: 64px; /* 133.333% */
-  margin-right: 690px;
+  /* margin-right: 690px; */
 }
 .project .top span {
   color: #282938;
+  vertical-align: bottom;
   font-family: Poppins;
   font-size: 16px;
   font-style: normal;
@@ -27,15 +28,18 @@
   line-height: 28px; /* 175% */
   text-wrap: nowrap;
   margin-top: 21px;
+  /* margin-left: auto; */
 }
 .project .top span:nth-of-type(1) {
   margin-right: 16px;
+  vertical-align: bottom;
+  margin-left: auto;
 }
 .project .bottom {
   display: grid;
-  grid-template-columns: 843px 405px;
+  grid-template-columns: 52% 48%;
   grid-template-rows: repeat(1, 600px);
-  gap: 32px;
+  gap: 12%;
 }
 .project .bottom .pic1 {
   position: relative;
@@ -46,7 +50,11 @@
   height: 100%;
   position: absolute;
   right: 100%;
-  background: linear-gradient(329deg, #1C1E53 -10.96%, rgba(28, 30, 83, 0.42) 103.96%);
+  background: linear-gradient(
+    329deg,
+    #1c1e53 -10.96%,
+    rgba(28, 30, 83, 0.42) 103.96%
+  );
   transition: 500ms;
 }
 .project .bottom .pic1:hover .cover {
@@ -56,12 +64,12 @@
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 .project .bottom .pic2 {
   display: grid;
-  grid-template-columns: repeat(1, 405px);
-  grid-template-rows: repeat(2, 284px);
+  grid-template-columns: repeat(1, auto);
+  grid-template-rows: repeat(2, auto);
   row-gap: 32px;
   position: relative;
   overflow: hidden;
@@ -71,9 +79,13 @@
   height: 284px;
   bottom: 100%;
   position: absolute;
-  background: linear-gradient(329deg, #1C1E53 -10.96%, rgba(28, 30, 83, 0.42) 103.96%);
+  background: linear-gradient(
+    329deg,
+    #1c1e53 -10.96%,
+    rgba(28, 30, 83, 0.42) 103.96%
+  );
   transition: 500ms;
 }
 .project .bottom .pic2:hover .cover {
   bottom: 53%;
-}/*# sourceMappingURL=project.css.map */
+} /*# sourceMappingURL=project.css.map */
