--- a/scss/tablet/menu.css
+++ b/scss/tablet/menu.css
@@ -12,7 +12,7 @@
     height: 24.71px;
     position: relative;
     top: 33px;
-    margin-left: 15px;
+    margin-left: 15%;
   }
 
   /* .menu::before{
@@ -27,12 +27,15 @@
 
   nav {
     text-align: center;
-    width: 100%;
+    width: 90%;
     display: flex;
+    flex-direction: column;
     position: relative;
+    flex-wrap: wrap;
+
     margin-top: 35px;
     gap: 25px;
-    margin-left: 10px;
+    margin-left: 5%;
     .option {
       a {
         /* margin-top: 30px; */
@@ -59,7 +62,7 @@
         color: #ffffff;
       }
     }
-    .contact {
+    .btn {
       margin-top: 20px;
       text-transform: capitalize;
       font-family: Poppins;
@@ -73,6 +76,8 @@
       margin-top: -17px;
       border-radius: 41px;
       border: 2px solid #f4f6fc33;
+      margin: auto;
+      margin-bottom: 2%;
     }
   }
 }
