--- a/scss/tablet/project.css
+++ b/scss/tablet/project.css
@@ -1,12 +1,14 @@
 .project {
   width: 80%;
   /* height: 728px; */
-  margin-right: auto;
-  margin-left: auto;
+  /* margin-left: 50%; */
+  /* margin-left: auto; */
 }
 .project .top {
   display: flex;
   margin-bottom: 64px;
+  display: flex;
+  flex-direction: column;
 }
 .project .top h2 {
   width: 100%;
@@ -17,7 +19,7 @@
   font-style: normal;
   font-weight: 600;
   line-height: 64px; /* 133.333% */
-  margin-right: 690px;
+  /* margin-right: 10px; */
 }
 .project .top span {
   color: #282938;
@@ -49,7 +51,11 @@
   height: 100%;
   position: absolute;
   right: 100%;
-  background: linear-gradient(329deg, #1C1E53 -10.96%, rgba(28, 30, 83, 0.42) 103.96%);
+  background: linear-gradient(
+    329deg,
+    #1c1e53 -10.96%,
+    rgba(28, 30, 83, 0.42) 103.96%
+  );
   transition: 500ms;
 }
 .project .bottom .pic1:hover .cover {
@@ -59,7 +65,7 @@
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 .project .bottom .pic2 {
   display: grid;
@@ -74,9 +80,13 @@
   height: 284px;
   bottom: 100%;
   position: absolute;
-  background: linear-gradient(329deg, #1C1E53 -10.96%, rgba(28, 30, 83, 0.42) 103.96%);
+  background: linear-gradient(
+    329deg,
+    #1c1e53 -10.96%,
+    rgba(28, 30, 83, 0.42) 103.96%
+  );
   transition: 500ms;
 }
 .project .bottom .pic2:hover .cover {
   bottom: 53%;
-}/*# sourceMappingURL=project.css.map */
+} /*# sourceMappingURL=project.css.map */
