--- a/page-2/css/tablet/process.css
+++ b/page-2/css/tablet/process.css
@@ -2,7 +2,7 @@
   width: 80%;
   height: 268px;
   margin-top: 128px;
-  margin-left: 100px;
+  margin-left: 10%;
 
   h2 {
     font-family: Poppins;
