--- a/page-2/css/tablet/who.css
+++ b/page-2/css/tablet/who.css
@@ -34,7 +34,7 @@
         color: #282938;
       }
       h3 {
-        width: 515px;
+        /* width: 515px; */
         height: 56px;
 
         font-family: Poppins;
