--- a/page-2/css/tablet/benefits.css
+++ b/page-2/css/tablet/benefits.css
@@ -1,8 +1,7 @@
 .benefits {
   width: 100%;
-  height: 2000px;
+  /* height: 2000px; */
   margin: 128px auto;
-  
 
   h2 {
     width: 100%;
@@ -21,7 +20,7 @@
     flex-direction: column;
     gap: 32px;
     .card {
-        margin: 0 auto;
+      margin: 0 auto;
       width: 405px;
       height: 316px;
       background-color: #f4f6fc;
