--- a/page-2/css/tablet/menu.css
+++ b/page-2/css/tablet/menu.css
@@ -11,8 +11,8 @@
     width: 70%;
     height: 24.71px;
     position: relative;
-    top: 33px;
-    margin-left: 15%;
+    margin-top: 10% !important;
+    margin: auto;
   }
 
   .menu {
