--- a/page-2/css/tablet/hero.css
+++ b/page-2/css/tablet/hero.css
@@ -2,7 +2,7 @@
   width: 80%;
   /* height: 336px; */
   margin-top: 128px;
-  margin-left: 95px;
+  margin-left: 10%;
   display: flex;
   flex-direction: column;
   /* /* grid-template-columns: 595px 547px; */
